--- a/src/styles/css/MobileFrame.css
+++ b/src/styles/css/MobileFrame.css
@@ -8,8 +8,8 @@
   width: 100%;
   max-height: 100%;
   height: 100vh;
-
   z-index: 999;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 500px) {
