--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
 body {
   margin: 0;
   font-family: "Noto Sans KR", sans-serif;
@@ -6,4 +6,8 @@ body {
 
 button {
   cursor: pointer;
+}
+
+a {
+  text-decoration: none;
 }
