--- a/src/styles/css/modal.css
+++ b/src/styles/css/modal.css
@@ -14,10 +14,10 @@
     border: 0;
   }
   .modal > section {
-    width: 90%;
-    max-width: 450px;
+    width: calc(100% - 40px);
+    max-width: 335px;
     margin: 0 auto;
-    border-radius: 0.3rem;
+    border-radius: 8px;
     background-color: #fff;
     /* 팝업이 열릴때 스르륵 열리는 효과 */
     animation: modal-show 0.3s;
@@ -25,36 +25,118 @@
   }
   .modal > section > header {
     position: relative;
-    padding: 16px 64px 16px 16px;
-    background-color: #f1f1f1;
-    font-weight: 700;
+    display: none;
+  }
+  .modal > section > header.showHeader {
+    display: block;
   }
   .modal > section > header button {
     position: absolute;
     top: 15px;
     right: 15px;
-    width: 30px;
+    width: 21px;
+    height: 21px;
     font-size: 21px;
     font-weight: 700;
     text-align: center;
     color: #999;
     background-color: transparent;
   }
-  .modal > section > main {
-    padding: 16px;
-    border-bottom: 1px solid #dee2e6;
-    border-top: 1px solid #dee2e6;
+
+  .modal > section > header button img {
+      width: 100%;
   }
+
+  .modal > section > main {
+    min-height: 133px;
+    padding: 12px;
+    border-bottom: 1px solid #dee2e6;
+    text-align: center;
+    display: flex;
+    align-items: center;
+  }
+
+  .modal > section > main.is_private {
+      border-bottom: none;
+      padding: 30px;
+  }
+  .modal > section > main>div {
+      width: 100%;
+  }
+  .modal > section > main h6 {
+    font-size: 16px;
+    font-weight: 300;
+    letter-spacing: -0.64px;
+}
+.modal > section > main h6+p {    
+    font-size: 15px;
+    font-weight: 400;
+}
+  .modal > section > main p {
+      width: 100%;
+      font-size: 18px;
+      font-weight: 500;
+      color: #575757;
+  }
+
+  .modal > section > main > .private_box {
+      position: relative;
+  }
+
+  .modal > section > main > .private_box h6 {
+    margin-bottom: 20px;    
+  }
+
+  .modal > section > main > .private_box ul li {
+    display: inline-block;
+    width: 40px;
+    height: 45px;
+    background-color: #ddd;
+    border-radius: 10px;
+    margin-right: 15px;
+  }
+  .modal > section > main > .private_box .ReactCodeInput input {
+    outline: none;
+    border : none !important;
+    color : #666 !important;
+  }
+  .modal > section > main > .private_box .ReactCodeInput input:last-child {
+      margin-right: 0 !important; 
+  }
+
+  .modal > section > main > .private_box .ReactCodeInput.disabled input {
+    outline: none;
+    border : 1px solid #999 !important;
+    color : #999 !important;
+}
+
+  .modal > section > main > .private_box button {
+    width: 160px;
+    height: 36px;
+    font-size: 14px;
+    padding: 8px;
+    color: #fff;
+    background-color: #575757;
+    border-radius: 20px;
+    margin-top: 9px;
+  }
+
   .modal > section > footer {
-    padding: 12px 16px;
-    text-align: right;
+    text-align: center;
+  }
+  .modal > section > footer.double_btn button{
+    width: 50%;
   }
   .modal > section > footer button {
-    padding: 6px 12px;
-    color: #fff;
-    background-color: #6c757d;
-    border-radius: 5px;
-    font-size: 13px;
+    width: 100%;
+    padding: 12px;
+    color: #575757;
+    background-color: #fff;
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .modal > section > footer button:last-child {
+    border-left: 1px solid #ccc;
   }
   .modal.openModal {
     display: flex;
