--- a/src/styles/css/modal.css
+++ b/src/styles/css/modal.css
@@ -8,6 +8,7 @@
     z-index: 99;
     background-color: rgba(0, 0, 0, 0.6);
   }
+
   .modal button {
     outline: none;
     cursor: pointer;
@@ -23,6 +24,13 @@
     animation: modal-show 0.3s;
     overflow: hidden;
   }
+  .fullmodal.modal > section {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    border-radius: 0;
+  }
+
   .modal > section > header {
     position: relative;
     display: none;
@@ -54,6 +62,21 @@
     text-align: center;
     display: flex;
     align-items: center;
+  }
+
+  .fullmodal.modal > section > main{
+    display: block;
+    margin-top: 90px;
+    height: 100%;
+    border:none;
+  }
+
+  .fullmodal.modal > section > main p {
+    font-size: 14px;
+    color: #000;
+    line-height: 1.36;
+    letter-spacing: -0.36;
+    font-weight: normal;
   }
 
   .modal > section > main.is_private {
@@ -144,6 +167,11 @@
     /* 팝업이 열릴때 스르륵 열리는 효과 */
     animation: modal-bg-show 0.3s;
   }
+
+  .fullmodal.modal.openModal {
+    display: block;
+  }
+
   @keyframes modal-show {
     from {
       opacity: 0;
