--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
-
 *{
   margin: 0;
   padding: 0;
@@ -8,7 +6,7 @@
 }
 body {
   margin: 0;
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: sans-serif;
 }
 
 button {
