--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap'); 
+/* //roboto => 디폴트 폰트 */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap'); 
+/* //poppins => 포인트 폰트 */
 *{
   margin: 0;
   padding: 0;
