--- a/src/styles/css/MobileFrame.css
+++ b/src/styles/css/MobileFrame.css
@@ -59,7 +59,7 @@
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  background-color: #fff;
+  background-color: #f4f6fa;
   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
 
   z-index: 999;
