--- a/src/styles/css/modal.css
+++ b/src/styles/css/modal.css
@@ -6,23 +6,32 @@
     bottom: 0;
     left: 0;
     z-index: 99;
-    background-color: rgba(0, 0, 0, 0.6);
+  }
+  .modal .dim {
+    width: 100%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(3, 1, 2, 0.6);
+    z-index: 1;
   }
 
   .modal button {
-    outline: none;
     cursor: pointer;
     border: 0;
   }
+
   .modal > section {
     width: calc(100% - 40px);
     max-width: 335px;
     margin: 0 auto;
     border-radius: 8px;
     background-color: #fff;
+    box-shadow: 0 4px 8px 0 rgba(3, 1, 2, 0.08);
     /* 팝업이 열릴때 스르륵 열리는 효과 */
     animation: modal-show 0.3s;
     overflow: hidden;
+    z-index: 2;
   }
   .fullmodal.modal > section {
     width: 100%;
@@ -56,9 +65,9 @@
   }
 
   .modal > section > main {
-    min-height: 133px;
+    min-height: 127px;
     padding: 12px;
-    border-bottom: 1px solid #dee2e6;
+    border-bottom: 1px solid #eff0f2;
     text-align: center;
     display: flex;
     align-items: center;
@@ -86,20 +95,9 @@
   .modal > section > main>div {
       width: 100%;
   }
-  .modal > section > main h6 {
-    font-size: 16px;
-    font-weight: 300;
-    letter-spacing: -0.64px;
-}
-.modal > section > main h6+p {    
-    font-size: 15px;
-    font-weight: 400;
-}
   .modal > section > main p {
       width: 100%;
-      font-size: 18px;
-      font-weight: 500;
-      color: #575757;
+      line-height: 21px;
   }
 
   .modal > section > main > .private_box {
@@ -152,14 +150,15 @@
   }
   .modal > section > footer button {
     width: 100%;
-    padding: 12px;
-    color: #575757;
+    padding: 17px;
     background-color: #fff;
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 18px;
+    
   }
   .modal > section > footer button:last-child {
-    border-left: 1px solid #ccc;
+    border-left: 1px solid #eff0f2;
   }
   .modal.openModal {
     display: flex;
