전체 디자인 수정중
완료된 페이지

- [x] 회원가입 (팝업포함)
- [x] 비밀번호 찾기 (팝업포함)
- [x] 로그인
- [x] 마이페이지 > 마이 리포트
- [x] 마이페이지
- [x] 메인 > 오늘의 소행성
- [x] 메인

--- a/src/styles/css/modal.css
+++ b/src/styles/css/modal.css
@@ -21,6 +21,10 @@
     border: 0;
   }
 
+  .fullmodal.modal main .send_btn {
+    border: 1px solid #a2aab3;
+  }
+
   .modal > section {
     width: calc(100% - 40px);
     max-width: 335px;
@@ -47,6 +51,11 @@
   .modal > section > header.showHeader {
     display: block;
   }
+
+  .fullmodal.modal > section > header {
+    display: block;
+  }
+
   .modal > section > header button {
     position: absolute;
     top: 15px;
@@ -78,14 +87,7 @@
     margin-top: 90px;
     height: 100%;
     border:none;
-  }
-
-  .fullmodal.modal > section > main p {
-    font-size: 14px;
-    color: #000;
-    line-height: 1.36;
-    letter-spacing: -0.36;
-    font-weight: normal;
+    padding: 0 20px;
   }
 
   .modal > section > main.is_private {
