--- a/src/styles/css/modal.css
+++ b/src/styles/css/modal.css
@@ -67,6 +67,7 @@
     text-align: center;
     color: #999;
     background-color: transparent;
+    z-index: 2;
   }
 
   .modal > section > header button img {
@@ -92,7 +93,7 @@
 
   .modal > section > main.is_private {
       border-bottom: none;
-      padding: 30px;
+      padding: 20px;
   }
   .modal > section > main>div {
       width: 100%;
@@ -104,45 +105,46 @@
 
   .modal > section > main > .private_box {
       position: relative;
+      padding: 36px 0 12px;
   }
 
-  .modal > section > main > .private_box h6 {
+  .modal > section > main > .private_box h3 {
     margin-bottom: 20px;    
   }
 
-  .modal > section > main > .private_box ul li {
-    display: inline-block;
-    width: 40px;
-    height: 45px;
-    background-color: #ddd;
-    border-radius: 10px;
-    margin-right: 15px;
+  .modal > section > main > .private_box p {
+    min-height: 15px;
+    margin: 4px 0 7px;
   }
+
   .modal > section > main > .private_box .ReactCodeInput input {
+    font-family: sans-serif;
     outline: none;
-    border : none !important;
-    color : #666 !important;
+    border : none;
+    border-radius: 4px;
+    margin-right: 12px;
+    padding-left: 2px;
+    padding-top: 5px;
+    width: 64px;
+    height: 76px;
+    font-size: 70px;
+    box-sizing: border-box;
+    color: #a2aab3;
+    background-color: #f4f6fa;
+  }
+  .modal > section > main > .private_box .ReactCodeInput input:focus {
+    border:1px solid #4149d3;
+    color:#030102;
   }
   .modal > section > main > .private_box .ReactCodeInput input:last-child {
       margin-right: 0 !important; 
   }
 
-  .modal > section > main > .private_box .ReactCodeInput.disabled input {
-    outline: none;
-    border : 1px solid #999 !important;
-    color : #999 !important;
+  .modal > section > main > .private_box .ReactCodeInput.fail input {
+    border : 1px solid #f57391;
+    color : #030102;
 }
 
-  .modal > section > main > .private_box button {
-    width: 160px;
-    height: 36px;
-    font-size: 14px;
-    padding: 8px;
-    color: #fff;
-    background-color: #575757;
-    border-radius: 20px;
-    margin-top: 9px;
-  }
 
   .modal > section > footer {
     text-align: center;
