--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap'); 
-/* //roboto => 디폴트 폰트 */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap');
+/* //notosans => 디폴트 폰트 */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap'); 
-
-
-@font-face {   font-family: 'Roboto';   font-style: normal;   font-weight: 400;
-  src: url(../src/styles/font/Roboto-Regular.woff2) format('woff2'),
-       url(../src/styles/font/Roboto-Regular.woff) format('woff'),
-       url(../src/styles/font/Roboto-Regular.otf) format('opentype'); }
-@font-face {   font-family: 'Roboto';   font-style: normal;   font-weight: 500;
-  src: url(../src/styles/font/Roboto-Medium.woff2) format('woff2'),
-       url(../src/styles/font/Roboto-Medium.woff) format('woff'),
-       url(../src/styles/font/Roboto-Medium.otf) format('opentype'); }
-@font-face {   font-family: 'Roboto';   font-style: normal;   font-weight: bold;
-  src: url(../src/styles/font/Roboto-Bold.woff2) format('woff2'),
-       url(../src/styles/font/Roboto-Bold.woff) format('woff'),
-       url(../src/styles/font/Roboto-Bold.otf) format('opentype'); }
-
-
 /* //poppins => 포인트 폰트 */
+
+
 *{
   margin: 0;
   padding: 0;
@@ -26,7 +12,7 @@
 }
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 button {
