--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
 /* //notosans => 디폴트 폰트 */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap'); 
 /* //poppins => 포인트 폰트 */
