--- a/src/styles/css/MobileFrame.css
+++ b/src/styles/css/MobileFrame.css
@@ -1,5 +1,5 @@
 .WebFullFrame {
-  position: fixed;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);  
@@ -56,11 +56,11 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
+  width: 375px;
   height: 100%;
   margin: 0 auto;
   background-color: #f4f6fa;
   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
-
   z-index: 999;
 }
 
