--- a/src/styles/css/modal.css
+++ b/src/styles/css/modal.css
@@ -44,6 +44,42 @@
     border-radius: 0;
   }
 
+  /* 공유하기 모달팝업---------------------------------------- */
+  .share.modal > section {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    max-width: 100%;
+    border-radius: 0;
+     /* 팝업이 열릴때 스르륵 열리는 효과 */
+     animation: share-modal-show 0.3s;
+  }
+
+  .share.modal > section > header {
+    padding: 16px 20px;
+    display: flex;
+    justify-content: space-around;
+    border: solid 1px #eff0f2;
+  }
+
+  .share.modal > section > header button {
+    width: 20px;
+    height: 20px;
+    right: 20px;
+    border:none;
+  }
+
+  .share.modal > section > main {
+    padding: 0;
+  }
+
+  .share.modal button {
+    border: 1px solid #a2aab3;
+  }
+
+  /* --------------------------------------공유하기 모달팝업 끝 */
+
   .modal > section > header {
     position: relative;
     display: none;
@@ -168,7 +204,7 @@
     display: flex;
     align-items: center;
     /* 팝업이 열릴때 스르륵 열리는 효과 */
-    animation: modal-bg-show 0.3s;
+    animation: modal-bg-show 0.2s;
   }
 
   .fullmodal.modal.openModal {
@@ -185,6 +221,17 @@
       margin-top: 0;
     }
   }
+  @keyframes share-modal-show {
+    from {
+      opacity: 0;
+      bottom: -275px;
+    }
+    to {
+      opacity: 1;
+      bottom: 0;
+    }
+  }
+
   @keyframes modal-bg-show {
     from {
       opacity: 0;
