--- a/src/styles/css/MobileFrame.css
+++ b/src/styles/css/MobileFrame.css
@@ -10,12 +10,39 @@
   overflow: hidden;
 }
 
+
+.MobileFullFrame {
+  position: absolute;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  vertical-align: middle;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 375px;
+  height: 100%;
+  margin: 0 auto;
+  background-color: #f4f6fa;
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
+  z-index: 999;
+}
+
+@media screen and (max-width: 500px) {
+  .MobileFullFrame {
+    position: inherit;
+    width: 100%;
+    height: 100vh;
+    min-width: 340px;
+  }
+}
+
 @media screen and (min-width: 500px) {
   .WebFullFrame {
     top: 50%;
     transform: translate(-40%, -50%);
     max-width: 375px;
-  }
+  }  
 }
 
 @media screen and (min-width: 900px) {
@@ -46,23 +73,7 @@
   }
 }
 
-.MobileFullFrame {
-  position: absolute;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  vertical-align: middle;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  width: 375px;
-  height: 100%;
-  margin: 0 auto;
-  background-color: #f4f6fa;
-  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
-  z-index: 999;
-}
+
 
 .Container {
   width: 100%;
